k8s/kapture-node.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kapture-node
  namespace: kapture
  labels:
    app: kapture-node
spec:
  selector:
    matchLabels:
      app: kapture-node
  template:
    metadata:
      labels:
        app: kapture-node
    spec:
      hostNetwork: true
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: kapture-node
        image: registry-ci.at4d.liacloud.com/devops/kapture-node:0.2.12
        ports:
        - containerPort: 9090
        securityContext:
          privileged: true
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            cpu: "100m"
            memory: "128Mi"
      terminationGracePeriodSeconds: 5
# ---
# apiVersion: extensions/v1beta1
# kind: NetworkPolicy
# metadata:
#   name: kapture-node-default-deny
#   namespace: kapture
# spec:
#   podSelector:
#     matchLabels:
#       app: kapture-node
#   ingress: []
# ---
# apiVersion: extensions/v1beta1
# kind: NetworkPolicy
# metadata:
#   name: kapture-node
#   namespace: kapture
# spec:
#   podSelector:
#     matchLabels:
#       app: kapture-node
#   ingress:
#   #FOR TEST PURPOSES ONLY
#   #- from: []
#   #Commenting out for now while we test
#   - from:
#       - podSelector:
#           matchLabels:
#             app: kapture-api
