k8s/kcapture-api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kcapture
  labels:
    name: kcapture
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcapture-api
  namespace: kube-system
  labels:
    app: kcapture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcapture-api
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kcapture-api
    spec:
      serviceAccountName: kcapture
      containers:
      - name: kcapture
        image: registry-ci.at4d.liacloud.com/devops/kcapture-api:0.1.0
        ports:
        - containerPort: 9090
      resources:
      requests:
        memory: "128i"
        cpu: "250m"
      limits:
        memory: "256Mi"
        cpu: "500m"
