k8s/nginx.yaml
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-test
  namespace: dev
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "100Mi"
          requests:
            cpu: "0.1"
            memory: "50Mi"
      terminationGracePeriodSeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: dev
spec:
  selector:
    app: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
