k8s/kapture-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kapture-api
  namespace: kapture
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kapture-api
  namespace: kapture
spec:
  hosts:
  - "*"
  gateways:
  - kapture-api
  http:
  - match:
    - uri:
        exact: /v1/healthcheck
    - uri:
        exact: /v1/pods
    route:
    - destination:
        host: kapture-api
        port:
          number: 9090
