k8s/kapture-api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kapture
  labels:
    name: kapture
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapture-api
  namespace: kapture
  labels:
    app: kapture-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kapture-api
  template:
    metadata:
      labels:
        app: kapture-api
    spec:
      serviceAccountName: kapture
      containers:
      - name: kapture
        #image: registry-ci.at4d.liacloud.com/devops/kapture-api:0.2.12
        image: spirrello/kapture-api:0.1.6
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: kapture-api
  namespace: kapture
spec:
  selector:
    app: kapture-api
  ports:
  - name: http
    protocol: TCP
    port: 9090
---
# #ALLOW EGRESS, DENY ALL INGRESS
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  annotations:
  name: default-deny
  namespace: kapture
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: kapture-api
  namespace: kapture
spec:
  podSelector:
    matchLabels:
      app: kapture-api
  ingress:
  - from: []
