k8s/kcapture-node.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kcapture-node
  namespace: kcapture
  labels:
    app: kcapture-node
spec:
  selector:
    matchLabels:
      app: kcapture-node
  template:
    metadata:
      labels:
        app: kcapture-node
    spec:
      hostNetwork: true
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: kcapture-node
        image: registry-ci.at4d.liacloud.com/devops/kcapture-node:0.2.9
        ports:
        - containerPort: 9090
        securityContext:
          privileged: true
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            cpu: "100m"
            memory: "128Mi"
      terminationGracePeriodSeconds: 5
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kcapture-node
  namespace: kcapture
spec:
  podSelector:
    matchLabels:
      app: kcapture-node
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: kcapture-api
